--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 APScheduler==3.10.1
+async-timeout==4.0.2
+cachelib==0.10.2
 click==8.1.3
 Flask==2.2.3
 Flask-APScheduler==1.12.4
+Flask-Session==0.4.0
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 python-dateutil==2.8.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+redis==4.5.4
 six==1.16.0
 tzdata==2023.3
 tzlocal==4.3
