--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 APScheduler==3.10.1
 async-timeout==4.0.2
+attrs==22.2.0
 cachelib==0.10.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.2.3
 Flask-APScheduler==1.12.4
 Flask-Session==0.4.0
+frozenlist==1.3.3
 gunicorn==20.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+multidict==6.0.4
+openai==0.27.4
 python-dateutil==2.8.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 redis==4.5.4
+requests==2.28.2
 six==1.16.0
+tqdm==4.65.0
 tzdata==2023.3
 tzlocal==4.3
+urllib3==1.26.15
 Werkzeug==2.2.3
+yarl==1.8.2
